[gd_scene load_steps=53 format=2]

[ext_resource path="res://Entities/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Raw Resources/Sprites/Characters/Red/walk_up.png" type="Texture" id=2]
[ext_resource path="res://Raw Resources/Sprites/Characters/Red/walk_left.png" type="Texture" id=3]
[ext_resource path="res://Raw Resources/Sprites/Characters/Red/walk_down.png" type="Texture" id=4]
[ext_resource path="res://Raw Resources/Sprites/Characters/Red/walk_right.png" type="Texture" id=5]
[ext_resource path="res://Entities/Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Enemies/CloseToPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Maps/CloseToCoverObject.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/Player/Hurtbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Raw Resources/Sprites/Shadows/LargeShadow Animated.png" type="Texture" id=12]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Shaders/DamageFlash.shader" type="Shader" id=14]
[ext_resource path="res://Maps/CoverObjectDetection.tscn" type="PackedScene" id=15]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 14 )
shader_param/flash_color = Color( 1, 0, 0, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 36 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 38, 26 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 12 )
region = Rect2( 38, 0, 38, 26 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "shadow",
"speed": 5.0
} ]

[sub_resource type="Animation" id=30]
resource_name = "FlashDamage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=31]
radius = 6.5
height = 3.0

[sub_resource type="CircleShape2D" id=32]
radius = 85.6491

[sub_resource type="CircleShape2D" id=33]
radius = 4.0

[sub_resource type="CircleShape2D" id=34]
radius = 56.0

[sub_resource type="CircleShape2D" id=35]
radius = 56.5127

[sub_resource type="CapsuleShape2D" id=36]
radius = 23.7592
height = 12.0

[sub_resource type="CapsuleShape2D" id=37]
radius = 10.0674
height = 8.57206

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemies",
]]
material = SubResource( 1 )
position = Vector2( 0, -9 )
collision_layer = 16
collision_mask = 19
script = ExtResource( 1 )
ACCELERATION = 150
FRICTION = 5000
KNOCKBACK_AMOUNT = 10

[node name="Stats" parent="." instance=ExtResource( 10 )]
max_health = 10

[node name="WalkAnimation" type="AnimatedSprite" parent="."]
use_parent_material = true
frames = SubResource( 26 )
animation = "walk_down"
offset = Vector2( 0, -9 )

[node name="ShadowAnimation" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 8 )
scale = Vector2( 0.75, 0.4 )
frames = SubResource( 29 )
animation = "shadow"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.3
anims/FlashDamage = SubResource( 30 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 1 )
wander_range = 64

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -2 )
shape = SubResource( 31 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.500001, -6.5 )
scale = Vector2( 5, 5 )

[node name="CoverObjectDetection" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( -0.420456, 0 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CoverObjectDetection"]
modulate = Color( 0, 0, 0, 1 )
shape = SubResource( 32 )

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -9 )
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( 64, 8 )
scale = Vector2( 10, 10 )
shape = SubResource( 33 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( -72, 8 )
scale = Vector2( 10, 10 )
shape = SubResource( 33 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( -88, 64 )
scale = Vector2( 20, 20 )
shape = SubResource( 33 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( -88, -56 )
scale = Vector2( 20, 20 )
shape = SubResource( 33 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( 88, 64 )
scale = Vector2( 20, 20 )
shape = SubResource( 33 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( 88, -56 )
scale = Vector2( 20, 20 )
shape = SubResource( 33 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( -5.60519e-45, 104 )
scale = Vector2( 20, 20 )
shape = SubResource( 33 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 1, 1, 1, 0.121569 )
position = Vector2( 1.00974e-28, -104 )
scale = Vector2( 20, 20 )
shape = SubResource( 33 )

[node name="CloseToPlayer" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, -8.57954 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="CloseToPlayer" index="0"]
shape = SubResource( 34 )

[node name="CloseToCoverObject" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="CloseToCoverObject" index="0"]
position = Vector2( 0, -8.59121 )
shape = SubResource( 35 )

[node name="Hurtbox" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 0, -9 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 36 )

[node name="Hitbox" parent="." instance=ExtResource( 13 )]
collision_mask = 2147483680
damage = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 37 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="CloseToPlayer" to="CloseToPlayer" method="_on_CloseToPlayer_body_entered"]
[connection signal="body_exited" from="CloseToPlayer" to="CloseToPlayer" method="_on_CloseToPlayer_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="CloseToPlayer"]
[editable path="CloseToCoverObject"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
